--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>TWICE Counter</title>
+
+	<link rel="icon"
+      type="image/png"
+      href="twice_logo.png">
+
+
 	<!--CSS Related Stuff-->
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="animate.css">
@@ -14,16 +20,19 @@
 
 </head>
 <body>
+	<div class="twiceBar"></div>
 <div class="container">
 	<div class="row">
 		<div class="six columns">
 
 <div id="twiceTitle"><h1>Days Until Twicelights!</h1></div>
 <div id="countdown"></div>
-<p>pick your bias</p>
+<p>Pick your bias!!</p>
 <button value="Refresh Page" onClick="window.location.reload();" class="btn">random</button>
 <button id="dahyun" class="btn">dahyun</button>
 <button id="tzuyu" class="btn" data-search="tzuyu">tzuyu</button>
+<br>
+<button id="sana" class="btn">sana</button>
 </div>
 <div class="six columns">
 	<div id="twiceGif" class="animated fadeIn delay-1s"></div>
