--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>TWICE Counter</title>
 
-	<link rel="icon"
-      type="image/png"
-      href="twice_logo.png">
+	<link rel="icon" type="image/png" href="/TWICE_LOGO.png" />
+
+	<!--Insert jQuery here-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!--<script src="jq.js"></script>-->
+
 
 
 	<!--CSS Related Stuff-->
@@ -28,11 +31,18 @@
 <div id="twiceTitle"><h1>Days Until Twicelights!</h1></div>
 <div id="countdown"></div>
 <p>Pick your bias!!</p>
-<button value="Refresh Page" onClick="window.location.reload();" class="btn">random</button>
+<button id="random" class="btn">random</button>
 <button id="dahyun" class="btn">dahyun</button>
 <button id="tzuyu" class="btn" data-search="tzuyu">tzuyu</button>
 <br>
 <button id="sana" class="btn">sana</button>
+<button id="nayeon" class="btn">nayeon</button>
+<button id="jeongyeon" class="btn">jeongyeon</button>
+<button id="mina" class="btn">mina</button>
+<button id="momo" class="btn">momo</button>
+<button id="jihyo" class="btn">jihyo</button>
+<br>
+<button id="chaeyoung" class="btn">chaeyoung</button>
 </div>
 <div class="six columns">
 	<div id="twiceGif" class="animated fadeIn delay-1s"></div>
