--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>TWICE Counter</title>
 
-	<link rel="icon" type="image/png" href="/TWICE_LOGO.png" />
+	<link rel="icon" type="image" href="favicon.ico" />
 
 	<!--Insert jQuery here-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
